--- a/app/src/main/res/drawable/circletext.xml
+++ b/app/src/main/res/drawable/circletext.xml
@@ -8,7 +8,7 @@
         android:centerY=".40"
         android:endColor="#FFFFFF"
         android:gradientRadius="20"
-        android:startColor="#FFFFFF"
+        android:startColor="#00FFFFFF"
         android:type="radial"/>
     <stroke
         android:width="1dp"
