--- a/app/src/main/res/layout/row_role_classe.xml
+++ b/app/src/main/res/layout/row_role_classe.xml
@@ -13,7 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:background="@drawable/circletext">
+        android:background="@drawable/fluide">
 
         <TextView
             android:id="@+id/cell_txt_classes_role"
@@ -26,7 +26,7 @@
             android:layout_marginBottom="8dp"
             android:text="name"
             android:textAlignment="center"
-            android:textColor="#87CEEB"
+            android:textColor="#000"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
